--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Cambay&family=Krona+One&family=Montserrat:wght@300;900&family=Poppins:wght@100;400&family=Prompt:wght@300;500&family=Roboto&display=swap');
+
 body {
-  background-color: bisque;
+  color: #fff;
+  background-color: rgb(14, 6, 36);
+  font-family: 'Poppins', sans-serif;
+}
+
+main {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
 }
