--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cambay&family=Krona+One&family=Montserrat:wght@300;900&family=Poppins:wght@100;400&family=Prompt:wght@300;500&family=Roboto&display=swap');
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -12,7 +12,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-li{
+li {
   list-style: none;
 }
 
@@ -22,34 +22,34 @@ main {
   text-align: center;
 }
 
-header{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 30px 10%;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
 }
 
-input{
+input {
   width: 30%;
   padding: 10px;
-  font-size: .9em;
+  font-size: 0.9em;
   border: none;
   border-radius: 20px;
 }
 
-.page-navigation{
+.page-navigation {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
 
-.page-navigation li>a{
+.page-navigation li > a {
   text-decoration: none;
   color: #fff;
   padding: 5px 10px;
 }
 
-.page-navigation li>a:hover{
+.page-navigation li > a:hover {
   background-color: rgb(54, 27, 126);
   border-radius: 10px;
 }
