--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,16 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  -ms-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
 }
 
 body {
   color: #fff;
-  background-image: linear-gradient(#000000be, #000), url('./imgs/cover.jpg');
+  background-image: linear-gradient(#00000073, #000), url('./imgs/cover.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -26,6 +31,19 @@ main {
   width: 85%;
   margin: 0 auto;
   padding-bottom: 8rem;
+}
+
+.title {
+  font-size: 35px;
+  margin-top: 5rem;
+}
+
+.none {
+  display: none;
+}
+
+.block {
+  display: block;
 }
 
 .cards {
@@ -51,12 +69,18 @@ main {
 
 .reservation-btn {
   padding: 3px 6px;
-  border: #ffde7b 2px solid;
+  border: #ee4a09 2px solid;
   margin-right: 0;
   margin-top: 20px;
-  width: 40%;
-  background-color: #fec827;
+  margin-bottom: 10px;
+  width: 50%;
+  background-color: #fa741a;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.493);
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 header {
@@ -75,6 +99,7 @@ input {
   font-size: 0.9em;
   border: none;
   border-radius: 20px;
+  outline: none;
 }
 
 .page-navigation {
@@ -99,16 +124,15 @@ input {
 }
 
 footer {
+  height: 5rem;
   justify-content: space-around;
   display: flex;
   gap: 30px;
   align-items: center;
-  background-color: rgb(14, 13, 13);
-  padding: 20px 10%;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.336), rgb(0, 0, 0));
   position: fixed;
   width: 100%;
   bottom: 0;
-  left: 0;
 }
 
 footer p {
