--- a/src/style.css
+++ b/src/style.css
@@ -53,34 +53,32 @@ main {
 }
 
 .card {
-  padding: 10px;
+  overflow: hidden;
+  padding: 10px 0;
   text-align: start;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(21, 7, 59);
-  width: 20%;
-  margin: 20px;
+  background-color: rgb(39, 39, 39);
+  width: 22%;
+  margin: 13px;
 }
 
 .movi-title {
   margin-bottom: 10px;
+  margin-left: 5px;
+  color: rgb(224, 224, 224);
 }
 
 .reservation-btn {
+  border: none;
   padding: 3px 6px;
-  border: #ee4a09 2px solid;
-  margin-right: 0;
+  margin-left: 7px;
   margin-top: 20px;
   margin-bottom: 10px;
-  width: 50%;
-  background-color: #fa741a;
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.493);
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
+  width: 40%;
+  background-color: #ffac31;
+
 }
 
 header {
