--- a/src/popup.css
+++ b/src/popup.css
@@ -26,3 +26,70 @@ body {
   flex-wrap: nowrap;
   overflow: hidden;
 }
+
+.popup {
+  position: absolute;
+  top: 0;
+  margin: 70px 10%;
+  background-color: rgb(15, 1, 15);
+  color: white;
+  height: 550px;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.popup-card {
+  height: 450px;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.popup-card:hover{
+  overflow-y: scroll;
+}
+
+.img-box {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+}
+
+.img-box img {
+  max-width: 100%;
+  max-height: 600px;
+  margin: 0 auto;
+}
+
+.text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 0 40px;
+}
+
+.text-box > p {
+  text-align: center;
+}
+
+.genres {
+  display: inline-flex;
+  gap: 10px;
+}
+
+.flex-grp {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.flex-grp > div {
+  display: flex;
+}
