--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ main {
   color: rgb(224, 224, 224);
 }
 
-.reservation-btn {
+.comment-btn {
   border: none;
   padding: 3px 6px;
   margin-left: 7px;
