--- a/src/popup.css
+++ b/src/popup.css
@@ -32,29 +32,37 @@ li {
 }
 
 .popup {
-  position: absolute;
+  position: fixed;
   top: 0;
-  margin: 70px 10%;
-  background-color: rgb(15, 1, 15);
+  left: 0;
   color: white;
-  height: 550px;
+  z-index: -1;
+  margin: 50px 10%;
+  height: 500px;
   display: flex;
   align-items: center;
   border-radius: 20px;
-  z-index: 1;
+  background-color: rgb(15, 1, 15);
+  overflow: hidden;
 }
 
+
+
 .popup-card {
-  height: 450px;
-  overflow-y: hidden;
+  overflow-y: scroll;
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 10px;
+  position: relative;
+  padding: 20px ;
+  height: 450px;
 }
 
-.popup-card:hover{
-  overflow-y: scroll;
+.fa-xmark{
+   position: absolute;
+   font-size: 50px;
+   right: 50px;
 }
 
 .img-box {
@@ -75,6 +83,7 @@ li {
   align-items: center;
   gap: 10px;
   padding: 0 40px;
+  width: 100%;
 }
 
 .text-box > p {
@@ -86,17 +95,39 @@ li {
   gap: 10px;
 }
 
+.movie-details{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
 .flex-grp {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 10px;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
 }
 
 .flex-grp > div {
   display: flex;
   align-items: center;
   gap: 3px;
+}
+
+.d-none{
+    display: none;
+}
+
+.cover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(14, 12, 12, 0.856);
+  filter: blur(8px);
+  min-height: 300vh;
+  width: 100%;
+  display: none;
+}
+
+.d-block{
+  display: block;
 }
