--- a/src/popup.css
+++ b/src/popup.css
@@ -49,7 +49,7 @@ li {
 
 
 .popup-card {
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -57,6 +57,24 @@ li {
   position: relative;
   padding: 20px ;
   height: 450px;
+}
+
+.popup-card::-webkit-scrollbar {
+  width: 10px;
+}
+
+.popup-card::-webkit-scrollbar-track {
+  background-color: yellow;
+  border-radius: 5px;
+}
+
+.popup-card::-webkit-scrollbar-thumb {
+  background-color: red;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 .fa-xmark{
