--- a/src/popup.css
+++ b/src/popup.css
@@ -49,7 +49,7 @@ li {
 
 
 .popup-card {
-  overflow-y: scroll;
+  overflow-y: hidden;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -59,10 +59,14 @@ li {
   height: 450px;
 }
 
+.popup-card:hover{
+  overflow-y: scroll;
+}
+
 .fa-xmark{
-   position: absolute;
+   position: fixed;
    font-size: 50px;
-   right: 50px;
+   right: 200px;
 }
 
 .img-box {
@@ -130,4 +134,10 @@ li {
 
 .d-block{
   display: block;
+}
+
+.comments{
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
