Resolved the conflicts

--- a/src/style.css
+++ b/src/style.css
@@ -34,27 +34,27 @@ main {
 }
 
 .title {
-  width: 100%;
+  font-size: 35px;
   margin-top: 5rem;
 }
 
 .none {
-  width: 0;
-  opacity: 0;
+  font-size: 0;
 }
 
 .block {
-  width: 100%;
-  opacity: 1;
+  font-size: 35px;
 }
 
 .cards {
   flex-wrap: wrap;
+  width: 100%;
   display: flex;
 }
 
 .card {
   overflow: hidden;
+  padding: 10px 0;
   text-align: start;
   display: flex;
   flex-direction: column;
@@ -62,23 +62,6 @@ main {
   background-color: rgb(39, 39, 39);
   width: 22%;
   margin: 13px;
-}
-
-.home_cards {
-  flex-wrap: wrap;
-  width: 100%;
-  display: flex;
-}
-
-.home_cards .card {
-  overflow: hidden;
-  text-align: start;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: rgb(39, 39, 39);
-  width: 9%;
-  margin: 5px;
 }
 
 .movi-title {
@@ -95,6 +78,7 @@ main {
   margin-bottom: 10px;
   width: 40%;
   background-color: #ffac31;
+
 }
 
 header {
