--- a/src/popup.css
+++ b/src/popup.css
@@ -157,6 +157,26 @@ li {
 
 .comments{
   display: flex;
-  gap: 10px;
+  gap: 20px;
   flex-direction: column;
+  text-align: center;
+  width: 100%;
+  padding: 5%;
+}
+
+.comments  form{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+  width: 70%;
+  margin-top: 30px;
+}
+
+.comments  form>input{
+  width: 80%;
+  padding: 10px 30px;
+  outline: none;
+  border-radius: 10px;
+  border: none;
 }
