--- a/src/popup.css
+++ b/src/popup.css
@@ -180,3 +180,26 @@ li {
   border-radius: 10px;
   border: none;
 }
+
+.comments  form>textarea{
+  width: 100%;
+  height: 100px;
+  outline: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  border: none;
+}
+
+.comments  form>button{
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  color: rgb(206, 197, 197);
+  background-color: rgb(39, 6, 39);
+}
+
+.comments  form>button:hover{
+  background-color: rgb(53, 18, 53);
+  box-shadow: 3px 4px 10px rgb(24, 23, 23);
+  color: #fff;
+}
