--- a/src/popup.css
+++ b/src/popup.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
@@ -35,7 +36,7 @@ li {
   position: fixed;
   top: 0;
   left: 0;
-  color: white;
+  color: rgb(212, 212, 212);
   z-index: -1;
   margin: 50px 10%;
   height: 500px;
@@ -44,6 +45,8 @@ li {
   border-radius: 20px;
   background-color: rgb(15, 1, 15);
   overflow: hidden;
+  width: 80%;
+  font-family: 'Lato', sans-serif;
 }
 
 
@@ -57,6 +60,7 @@ li {
   position: relative;
   padding: 20px ;
   height: 450px;
+  width: 100%;
 }
 
 .popup-card:hover{
@@ -85,7 +89,7 @@ li {
 .fa-xmark{
    position: fixed;
    font-size: 50px;
-   right: 150px;
+   right: 200px;
 }
 
 .img-box {
@@ -179,6 +183,7 @@ li {
   outline: none;
   border-radius: 10px;
   border: none;
+  font-size: 1.1em;
 }
 
 .comments  form>textarea{
@@ -188,6 +193,7 @@ li {
   padding: 10px 30px;
   border-radius: 10px;
   border: none;
+  font-size: 1.4em;
 }
 
 .comments  form>button{
@@ -196,6 +202,7 @@ li {
   border: none;
   color: rgb(206, 197, 197);
   background-color: rgb(39, 6, 39);
+  cursor: pointer;
 }
 
 .comments  form>button:hover{
