--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,7 @@ footer p {
   color: rgb(224, 224, 224);
 }
 
-.reservation-btn {
+.reservation-btn,.comment-btn {
   border: none;
   padding: 3px 6px;
   margin-left: 7px;
