--- a/src/popup.css
+++ b/src/popup.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cambay&family=Krona+One&family=Montserrat:wght@300;900&family=Poppins:wght@100;400&family=Prompt:wght@300;500&family=Quicksand:wght@300&family=Roboto&display=swap');
 
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ li {
 }
 
 .fa-star {
-  font-size: 18px;
+  font-size: 15px;
   color: orange;
 }
 
@@ -40,38 +40,39 @@ li {
   color: rgb(212, 212, 212);
   z-index: -1;
   margin: 50px 10%;
-  height: 500px;
+  height: 600px;
   display: flex;
   align-items: center;
-  border-radius: 20px;
-  background-color: rgb(15, 1, 15);
+  backdrop-filter: blur(1rem);
+  background-color: rgba(44, 43, 44, 0.521);
   overflow: hidden;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .popup-card {
   overflow-y: hidden;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  text-align: start;
   gap: 10px;
   position: relative;
   padding: 20px;
-  height: 450px;
+  height: 95%;
   width: 100%;
 }
 
 .popup-card::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 .popup-card::-webkit-scrollbar-track {
-  background-color: yellow;
+  background-color: rgba(177, 177, 177, 0.76);
   border-radius: 5px;
 }
 
 .popup-card::-webkit-scrollbar-thumb {
-  background-color: red;
+  background-color: rgba(99, 99, 99, 0.733);
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -85,14 +86,15 @@ li {
 
 .fa-xmark {
   position: fixed;
-  font-size: 50px;
-  right: 200px;
+  font-size: 30px;
+  right: 40px;
 }
 
 .img-box {
-  width: 60%;
-  display: flex;
-  justify-content: center;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 40%;
 }
 
 .img-box img {
@@ -102,16 +104,18 @@ li {
 }
 
 .text-box {
+  font-size: 17px;
+  margin-left: 40%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 10px;
   padding: 0 40px;
-  width: 100%;
+  width: 60%;
 }
 
 .text-box > p {
-  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .genres {
@@ -145,11 +149,13 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(14, 12, 12, 0.856);
+  background-color: rgba(14, 12, 12, 0.445);
+  backdrop-filter: blur(1rem);
   filter: blur(8px);
   min-height: 300vh;
   width: 100%;
   display: none;
+  z-index: 20;
 }
 
 .d-block {
@@ -160,9 +166,8 @@ li {
   display: flex;
   gap: 20px;
   flex-direction: column;
-  text-align: center;
   width: 100%;
-  padding: 5%;
+  margin-top: 20px;
 }
 
 .comments form {
@@ -175,27 +180,25 @@ li {
 }
 
 .comments form > input {
-  width: 80%;
-  padding: 10px 30px;
+  width: 60%;
+  padding: 5px 10px;
   outline: none;
-  border-radius: 10px;
   border: none;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .comments form > textarea {
+  color: rgb(206, 197, 197);
   width: 100%;
   height: 100px;
   outline: none;
-  padding: 10px 30px;
-  border-radius: 10px;
+  padding: 10px 10px;
   border: none;
-  font-size: 1.4em;
+  font-size: 1em;
 }
 
 .comments form > button {
   padding: 10px 20px;
-  border-radius: 10px;
   border: none;
   color: rgb(206, 197, 197);
   background-color: rgb(39, 6, 39);
