--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,16 @@ main {
   margin-bottom: 20px;
 }
 
+.number {
+  background-color: #090457;
+  padding: 1px 7px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
 .none {
   width: 0;
   height: 0;
