--- a/src/popup.css
+++ b/src/popup.css
@@ -91,6 +91,7 @@ li {
 }
 
 .img-box {
+  height: 100%;
   top: 0;
   left: 0;
   position: fixed;
@@ -99,7 +100,7 @@ li {
 
 .img-box img {
   max-width: 100%;
-  max-height: 600px;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -110,6 +111,7 @@ li {
   flex-direction: column;
   gap: 10px;
   padding-right: 60px;
+  padding-left: 10px;
   width: 60%;
 }
 
