--- a/src/media.css
+++ b/src/media.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 612px) {
   header {
     flex-wrap: wrap;
     align-items: center;
@@ -8,8 +8,11 @@
   }
 
   .card {
-    width: 100%;
-    margin: 10px;
+    width: 80%;
+  }
+
+  .home_cards .card {
+    width: 80%;
   }
 
   .seach {
@@ -21,18 +24,12 @@
     font-size: 20px;
   }
 
-  .home_cards {
-    flex-direction: column;
-    display: flex;
-  }
-
-  .home_cards .card {
-    width: 100%;
-  }
-
+  .home_cards,
   .cards {
     flex-direction: column;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
   footer {
@@ -43,5 +40,21 @@
   .socials li {
     width: 60%;
     margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 612px) and (max-width: 820px) {
+  .card {
+    width: 47%;
+  }
+
+  .home_cards .card {
+    width: 47%;
+  }
+
+  .home_cards,
+  .cards {
+    flex-wrap: wrap;
+    display: flex;
   }
 }
