--- a/src/popup.css
+++ b/src/popup.css
@@ -212,3 +212,32 @@ li {
   box-shadow: 3px 4px 10px rgb(24, 23, 23);
   color: #fff;
 }
+
+@media only screen and (max-width: 612px) {
+  .popup {
+    margin: 0 0;
+    min-height: 100vh;
+  }
+
+  .movie-details {
+    flex-direction: column;
+  }
+
+  .genres {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .img-box {
+    position: relative;
+    width: 40%;
+  }
+
+  .text-box {
+    text-align: center;
+    padding-right: 0;
+    width: 100%;
+    margin-left: 5px;
+  }
+}
