--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ main {
   margin-top: 1em;
 }
 
-.heading{
+.heading {
   width: 60%;
   margin-left: 8%;
 }
@@ -59,7 +59,7 @@ main {
 }
 
 .block {
- display: block;
+  display: block;
 }
 
 footer p {
@@ -67,7 +67,7 @@ footer p {
   font-weight: 300;
 }
 
-.cards-holder{
+.cards-holder {
   margin: 0 auto;
 }
 
@@ -75,7 +75,7 @@ footer p {
   flex-wrap: wrap;
   display: flex;
   margin: 0 auto;
-  justify-content:center;
+  justify-content: center;
   align-items: stretch;
   gap: 20px;
 }
@@ -87,7 +87,7 @@ footer p {
   justify-content: center;
   background: rgba(39, 39, 39, 0.274);
   backdrop-filter: blur(2rem);
-  width: 24%;
+  width: 23%;
 }
 
 .card p {
@@ -103,11 +103,11 @@ footer p {
   border-bottom-right-radius: 60px;
 }
 
-.buttons-holder{
-display:flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px 15px;
+.buttons-holder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
 }
 
 .home_cards {
@@ -127,7 +127,7 @@ padding: 10px 15px;
   justify-content: center;
   background: rgba(39, 39, 39, 0.274);
   backdrop-filter: blur(2rem);
-  width: 25%;
+  width: 23%;
   font-size: 1.2em;
 }
 
@@ -147,16 +147,16 @@ padding: 10px 15px;
   padding: 6px 10px;
   background-color: #ff9f31;
   border-radius: 40px !important;
-  font-size: .8em;
+  font-size: 16px;
   font-weight: 600;
-  cursor:pointer;
+  cursor: pointer;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
 
-.comment-btn:hover{
+.comment-btn:hover {
   background-color: #bd7829;
   color: #fff;
 }
@@ -259,7 +259,7 @@ footer {
   color: rgb(52, 26, 122);
 }
 
-.likes-holder{
+.likes-holder {
   display: flex;
   gap: 10px;
   align-items: center;
