--- a/src/popup.css
+++ b/src/popup.css
@@ -6,17 +6,18 @@
   margin: 0;
 }
 
+
 li {
   list-style: none;
 }
 
 .fa-star {
-  font-size: 15px;
+  width: 18px;
+  font-size: 18x;
   color: orange;
 }
 
 .star-rating {
-  width: 100px;
   position: relative;
 }
 
@@ -35,43 +36,71 @@ li {
 
 .popup {
   position: fixed;
-  top: 0;
-  left: 0;
-  color: rgb(212, 212, 212);
-  z-index: -1;
-  margin: 50px 10%;
-  height: 500px;
   display: flex;
-  align-items: center;
+  top: 5%;
+  color: rgb(212, 212, 212);
+  z-index: 20;
+  width: 85%;
+  height: 90%;
   backdrop-filter: blur(1rem);
   background-color: rgba(44, 43, 44, 0.521);
-  overflow: hidden;
   font-family: 'Quicksand', sans-serif;
+  visibility: hidden;
+  padding: 3%;
 }
 
 .popup-card {
-  overflow-y: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: start;
-  gap: 10px;
-  position: relative;
-  padding: 20px;
-  height: 90%;
-  width: 100%;
+  height: 100%;
+  gap: 20px;
+  overflow: hidden;
 }
 
-.popup-card::-webkit-scrollbar {
+.fa-xmark {
+  position: fixed;
+  font-size: 30px;
+  right: 20px;
+  top: 7px;
+  transition: none;
+}
+
+.fa-xmark:hover{
+  background-color: rgb(19, 19, 19);
+  padding: 1px 6px;
+  border-radius: 4px;
+  right: 10px;
+}
+
+.fa-xmark:active{
+  color: rgb(126, 126, 126);
+}
+
+.img-box img {
+  height: 100%;
+    max-width: 100%;
+  margin: 0 auto;
+}
+
+.text-box {
+  font-size: 17px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 70%;
+  overflow: auto;
+  padding-right: 5px;
+}
+
+.text-box::-webkit-scrollbar {
   width: 6px;
 }
 
-.popup-card::-webkit-scrollbar-track {
+.text-box::-webkit-scrollbar-track {
   background-color: rgba(177, 177, 177, 0.76);
   border-radius: 5px;
 }
 
-.popup-card::-webkit-scrollbar-thumb {
+.text-box::-webkit-scrollbar-thumb {
   background-color: rgba(99, 99, 99, 0.733);
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -80,54 +109,17 @@ li {
   -o-border-radius: 5px;
 }
 
-.popup-card:hover {
-  overflow-y: auto;
-}
-
-.fa-xmark {
-  position: fixed;
-  font-size: 30px;
-  right: 40px;
-}
-
-.img-box {
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 40%;
-}
-
-.img-box img {
-  max-width: 100%;
-  height: 100%;
-  margin: 0 auto;
-}
-
-.text-box {
-  font-size: 17px;
-  margin-left: 40%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding-right: 60px;
-  padding-left: 10px;
-  width: 60%;
-}
-
-.text-box > p {
-  margin-bottom: 30px;
-  margin-top: 20px;
-}
-
 .genres {
   display: inline-flex;
   gap: 10px;
+  flex-wrap: wrap;
 }
 
 .movie-details {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
+  gap: 10px;
   justify-content: space-between;
 }
 
@@ -140,7 +132,12 @@ li {
 .flex-grp > div {
   display: flex;
   align-items: center;
+  justify-content: start;
   gap: 3px;
+}
+
+.flex-grp > div>h4{
+ white-space: nowrap;
 }
 
 .d-none {
@@ -148,16 +145,16 @@ li {
 }
 
 .cover {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(14, 12, 12, 0.445);
   backdrop-filter: blur(1rem);
   filter: blur(8px);
-  min-height: 300vh;
+  height: 100%;
   width: 100%;
   display: none;
-  z-index: 20;
+  z-index: 19;
 }
 
 .d-block {
@@ -213,31 +210,65 @@ li {
   color: #fff;
 }
 
-@media only screen and (max-width: 612px) {
-  .popup {
-    margin: 0 0;
-    min-height: 100vh;
+@media only screen and (max-width: 992px) {
+ .popup{
+    height: 70%;
+    top: 15%
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .popup{
+    height: 90%;
+    top:5%;
+    width: 70%;
+    padding: 0;
+    font-size: 1em;
   }
 
-  .movie-details {
+  .popup-card{
     flex-direction: column;
+    overflow-y: scroll;
   }
 
-  .genres {
+  .popup-card::-webkit-scrollbar {
+  width: 6px;
+}
+
+.popup-card::-webkit-scrollbar-track {
+  background-color: rgba(177, 177, 177, 0.76);
+  border-radius: 5px;
+}
+
+.popup-card::-webkit-scrollbar-thumb {
+  background-color: rgba(99, 99, 99, 0.733);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+  .text-box{
+    overflow: visible;
+    width: 100%;
+    justify-content: center;
+    padding: 0 10px 10px;
+    text-align: center;
+  }
+
+  .movie-details{
     flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
 
-  .img-box {
-    position: relative;
-    width: 40%;
-  }
+  .flex-grp {
+  align-items: center;
+}
+}
 
-  .text-box {
-    text-align: center;
-    padding-right: 0;
-    width: 100%;
-    margin-left: 5px;
+@media only screen and (max-width: 576px){
+  .popup{
+    width: 90%;
   }
 }
