--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ body {
   background-position: center;
   background-size: cover;
   font-family: 'Poppins', sans-serif;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
 }
 
 li {
