--- a/src/popup.css
+++ b/src/popup.css
@@ -223,9 +223,14 @@ li {
     top:5%;
     width: 70%;
     padding: 0;
-    font-size: 1em;
+    font-size: 0.5em;
   }
 
+   .fa-star {
+  width: 16px;
+  font-size: 16px;
+  color: orange;
+}
   .img-box{
     width: 100%;
     display: flex;
@@ -266,6 +271,7 @@ li {
     justify-content: center;
     padding: 0 10px 10px;
     text-align: center;
+    font-size: 17px;
   }
 
   .movie-details{
@@ -282,4 +288,14 @@ li {
   .popup{
     width: 90%;
   }
+
+   .fa-star {
+  width: 13px;
+  font-size: 13px;
+  color: orange;
+}
+
+.text-box{
+  font-size: 14px;
+}
 }
